# rust-file-indexing

./: .gitignore  Cargo.toml  README.md
results/: index.csv
scripts/: analysis.py
src/: indexing.rs  lib.rs  main.rs  path_data.rs  utils.rs
src/analysis/: analysis.rs
src/indexing/: index_creation.rs  index_processing.rs  indexing.rs
src/path_data/: path_data.rs
src/utils/: file_operations.rs  formatting.rs  hashing.rs  loading_saving.rs
