[package]
name = "rust-folder-analysis"
version = "0.1.1"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = {version = "4.5.16", features = ["cargo"]}
csv = "1.3.0"
env_logger = "0.11.5"
hex = "0.4.3"
log = "0.4.22"
polars = {version = "0.41.3", features = ["lazy", "parquet"]}
rayon = "1.10.0"
ring = "0.17.8"
serde = {version = "1.0.204", features=["derive"]}
serde_json = "1.0.122"

[profile.release] 
opt-level=3
debug = true
